# assist

./: Cargo.toml  Rocket.toml
src/: main.rs
src/auto/: api.rs  client.rs  mod.rs
src/content/: mod.rs
src/docs/: mod.rs  sdd.rs  srs.rs
